style: fix photo filter on mobile

--- a/src/style/pages/_catalog-detail.scss
+++ b/src/style/pages/_catalog-detail.scss
@@ -272,7 +272,6 @@
       filter: grayscale(0);
     }
     @include media-screen {
-      filter: grayscale(0);
       height: 41rem;
       display: flex;
     }
